# synsex-capture

./: .gitignore  README.md  pyproject.toml
captures/: 01_BASE_ALL_TRACK_VEL100_EMPTY.syx  capture_20260526_141409_0010.syx  capture_20260526_141409_0011.syx  capture_20260526_151857_0002.syx  capture_20260526_151857_0003.syx  capture_20260526_151857_0004.syx  capture_20260526_151857_0007.syx  capture_20260526_151857_0008.syx  capture_20260526_151857_0010.syx  capture_20260526_151857_0013.syx  capture_20260526_151857_0014.syx  capture_20260526_151857_0015.syx  capture_20260526_151857_0016.syx  capture_20260526_151857_0017.syx  capture_20260526_151857_0020.syx  capture_20260526_151857_0022.syx  capture_20260526_151857_0023.syx  capture_20260526_151857_0024.syx  capture_20260526_151857_0027.syx  capture_20260526_151857_0032.syx  capture_20260526_151857_0034.syx  capture_20260526_151857_0035.syx  capture_20260526_151857_0036.syx  capture_20260526_151857_0039.syx  capture_20260526_151857_0040.syx  capture_20260526_151857_0041.syx  capture_20260526_151857_0045.syx  capture_20260526_151857_0047.syx  capture_20260526_151857_0048.syx  capture_20260526_151857_0050.syx  capture_20260526_151857_0052.syx  capture_20260526_151857_0053.syx  capture_20260526_151857_0054.syx  capture_20260526_151857_0059.syx  capture_20260526_151857_0060.syx  capture_20260526_155700_0003.syx  capture_20260526_155700_0004.syx  capture_20260526_155700_0005.syx  capture_20260526_155700_0006.syx  capture_20260526_155700_0007.syx  (+14 more)
datasets/: capture_20260526_141409_0001.yaml  capture_20260526_141409_0002.yaml  (+98 more)
(+915 files in other folders)
