[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synsex-capture"
version = "0.1.0"
description = "CLI tool for capturing, replaying, and analyzing MIDI SysEx data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mido>=1.3.0",
  "python-rtmidi>=1.5.8",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
synsex_capture = "synsex_capture.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
